@@ -4,6 +4,13 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/10/30
+	* Updated the code so mobs can use ChainAction as a targetted skill.
+	  [Skotlex]
+	* Added GroundDrift effects for Wind (Stun) and Fire (knockback). The
+	  knockback value is unknown, so 3 is used for now. [Skotlex]
+	* Cleaned up some more the steal code, now you can't steal the last slot
+	  regardless of skill level used. [Skotlex]
+	* Added consideration of Chain Action when cloning GunSlingers. [Skotlex]
 	* Modified battle_calc_return_damage to take the skill id as well, now
 	  magic damage return will not work on skills tagged as ground or self
 	  targetted. [Skotlex]
